force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Renewal__c/CPQ_Lookup_Table_Nested_Product_Renewal__c.object-meta.xml
<CustomObject>
    <description>Used as Lookup table for Renewal Quotes</description>
    <label>(Dep)CPQ Lookup-Nested Product Renewal</label>
    <nameField>
        <displayFormat>PRNTR-{000000}</displayFormat>
        <label>CPQ Lookup Table-Nested Product Renewal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(Dep)CPQ Lookup-Nested Product Renewal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>