force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Renewal__c/fields/Is_RCDM__c.field-meta.xml
<CustomField>
    <fullName>Is_RCDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RCDM</label>
    <type>Checkbox</type>
</CustomField>