force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Renewal__c/fields/Licensing_Model__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Model__c</fullName>
    <label>Licensing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Life of Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>