force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Renewal__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>CPQ_Lookup_Table_Nested_Product_Renewal</relationshipName>
    <type>Lookup</type>
</CustomField>