force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Renewal__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>