force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Renewal__c/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L3 Basic</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>